--- a/.github/workflows/cypress-report.yaml
+++ b/.github/workflows/cypress-report.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Generate HTML report
         run: npm run report:generate
       
-      - name: Deploy report page
+      - name: Deploy part page
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
